--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ h1 {
 <script>
 document.querySelector('.download-btn').addEventListener('click', function(e) {
   e.preventDefault();
-  window.location.href = "https://download1590.mediafire.com/cupkot85yfegCLs2yOrOw4K8RjyK5ha72Gpv1y0vRDensUvB0_RuGQccybz2J09uVtSBCEUsxxBraIukptsfiEqO7QBIJtSW4iIh8SgGqjzFFzkcsBqK_346tLTVTyyz9rcHWVofR8AKzgP0rzHGERin1TSxMu7YIVgL7XX7dGo/vje0sn22uf7imf3/x48-Cheat_FiveM.rar";
+  window.location.href = "https://www.mediafire.com/file/gzw1gyrw8u2huuc/x48_cracked.rar/file";
 });
 </script>
 
